--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".OishiiApplication"
         android:icon="@drawable/oishii_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/oishii_logo"
